--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Application Architecture</string>
+    <string name="login_name">enter you login</string>
+    <string name="password">enter you password</string>
+    <string name="login">login</string>
 </resources>
