--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="login_name">enter you login</string>
     <string name="password">enter you password</string>
     <string name="login">login</string>
+    <string name="registration">registration</string>
+    <string name="forgot">forgot</string>
 </resources>
