Составили структуру и переписали немного логику. Добавили class App.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login">login</string>
     <string name="registration">registration</string>
     <string name="forgot">forgot</string>
+    <string name="error">ошибка ввода данных</string>
 </resources>
